# Web-Scraper

./: README.md  pyproject.toml
tests/: test_web_scraper.py
web_scraper/: scraper.py
